--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "src:build": "vuepress build src"
   },
   "devDependencies": {
-    "vuepress": "^1.8.2"
+    "vuepress": "^2.0.0-rc.14"
   }
 }
