--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "src:build": "vuepress build src"
   },
   "devDependencies": {
+    "@vuepress/bundler-vite": "^2.0.0-rc.14",
     "vuepress": "^2.0.0-rc.14"
   }
 }
