--- a/.github/workflows/vuepress.yml
+++ b/.github/workflows/vuepress.yml
@@ -25,22 +25,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set Node.js 16.x
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 16.x
-      - name: Run install
-        uses: borales/actions-yarn@v4
+      - uses: borales/actions-yarn@v4
         with:
           cmd: install
-      - name: Build VuePress site
-        uses: borales/actions-yarn@v4
+      - uses: borales/actions-yarn@v4
         with:
           cmd: src:build
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+      - uses: actions/upload-pages-artifact@v2
         with:
           # Upload entire repository
           path: './docs/'
@@ -51,6 +46,5 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
+      - id: deployment
         uses: actions/deploy-pages@v2
