--- a/.github/workflows/vuepress.yml
+++ b/.github/workflows/vuepress.yml
@@ -29,7 +29,14 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
-      - run: npm ci
+      - id: cache-node-modules
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: node-modules-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+          restore-keys: node-modules-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+      - if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm ci
       - run: npm run src:build
       - uses: actions/upload-pages-artifact@v2
         with:
