--- a/.github/workflows/vuepress.yml
+++ b/.github/workflows/vuepress.yml
@@ -25,10 +25,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 16.x
+          node-version: 22.x
       - id: cache-node-modules
         uses: actions/cache@v4
         with:
@@ -38,10 +38,10 @@ jobs:
       - if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm ci
       - run: npm run src:build
-      - uses: actions/upload-pages-artifact@v2
+      - uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: './docs/'
+          path: docs
   deploy:
     environment:
       name: github-pages
@@ -50,4 +50,4 @@ jobs:
     needs: build
     steps:
       - id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
